--- a/mathquestionbank/src/main/resources/application.properties
+++ b/mathquestionbank/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/springwork?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/mathdb?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 server.port = 8090
 
