--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,23 @@
 			<artifactId>ant</artifactId>
 			<version>1.8.2</version>
 		</dependency>
+		<dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>bootstrap</artifactId>
+            <version>3.3.6</version>
+        </dependency>
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>jquery</artifactId>
+            <version>3.3.1</version>
+        </dependency>
+       
+
+<dependency>
+    <groupId>org.webjars</groupId>
+    <artifactId>jquery</artifactId>
+    <version>1.9.1</version>
+</dependency>
 	</dependencies>
 	<build>
 		<plugins>
